# agentic-mesh

./: BUILD_KERNEL.md  Dockerfile.adapters  Dockerfile.kernel  FAQ.md  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  Makefile  README.md  docker-compose.yml  fix1.md  fix1_execution_plan.md  industries.md  llm_technical_guide.md  plannerhelper.md  prd_self_evovolving.md  prd_selfhealing.md  rerun.md  test_quickstart.sh  tickets.md  transcript.md  verified_answers_usecase.md  xrd_self_evolving.archive
.github/workflows/: ci.yml
adapters/: package.json  tsconfig.json
adapters/src/: server.ts
adapters/src/adapters/: mcp.ts  (+2 more)
config/: tools.json
docs/: api.md  evidence.md  plan-ir.md  protocols.md  quickstart.md
examples/: plan.refund.json  run.sample.sh  sample.corpus.jsonl
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/cmd/ampctl/: main.rs
kernel/src/internal/: api.rs  registry.rs
kernel/src/internal/evidence/: verify.rs
kernel/src/internal/exec/: constraints.rs  scheduler.rs
kernel/src/internal/mem/: store.rs
kernel/src/internal/plan/: ir.rs
kernel/src/internal/policy/: policy.rs
kernel/src/internal/tools/: spec.rs
kernel/src/internal/trace/: trace.rs
kernel/tests/: cli_tests.rs  constraint_tests.rs  e2e_quickstart_test.rs  evidence_tests.rs  integration_tests.rs  planner_constraints_test.rs  policy_tests.rs  registry_service_tests.rs  trace_tests.rs
schemas/: Evidence.schema.json  Memory.schema.json  Plan.schema.json  ToolSpec.schema.json  Trace.schema.json
spec-ts/: package.json  tsconfig.json
spec-ts/src/: index.ts  types.ts
(+5 files in other folders)
