[package]
name = "amp"
version = "0.1.0"
edition = "2021"
authors = ["AMP Project"]
description = "Agentic Mesh Protocol orchestration kernel"
license = "MIT"

[[bin]]
name = "ampctl"
path = "src/cmd/ampctl/main.rs"

[[bin]]
name = "kernel-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = "2.0"
rand = "0.8"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"

[dev-dependencies]